lustre/quota/lquota_internal.h
@@ -129,6 +129,9 @@ struct lquota_slv_entry {
 
 	/* when latest acquire RPC completed */
 	__u64			lse_acq_time;
+
+	/* when latest edquot set */
+	__u64			lse_edquot_time;
 };
 
 /* In-memory entry for each enforced quota id
@@ -208,6 +211,7 @@ struct lquota_site {
 #define lqe_lockh		u.se.lse_lockh
 #define lqe_acq_rc		u.se.lse_acq_rc
 #define lqe_acq_time		u.se.lse_acq_time
+#define lqe_edquot_time		u.se.lse_edquot_time
 
 #define LQUOTA_BUMP_VER 0x1
 #define LQUOTA_SET_VER  0x2
